--- a/Ommig.html
+++ b/Ommig.html
@@ -16,7 +16,7 @@
 <body>
     <header> <!--side hoved med navigation-->
         <nav class="navbar"> <!--navigationens container-->
-            <img src="image/Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
+            <img src="image/logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
             
             <!--liste med menuens links-->
             <ul class="navlinks">
@@ -34,9 +34,9 @@
     </section>
 
     <!--her kommer der nogle billeder af mig senere/container til img-->
-    <section class="omimg">
-        <img src="image/ommig2.webp" class="om-billede">
-    </section>
+    <div class="omimg">
+        <img src="image/ommig2.webp" class="om-billede" alt="billede af mig">
+    </div>
 
     <!--tekst stykke under mine billeder-->
     <section class="Praesentation">
@@ -70,7 +70,7 @@
        <h3>Mine It-Kompetencer</h3>
      </section>
 
-     <section>
+     <div>
        <div class="kom-tags">
         <span>Adobe Photoshop</span>
         <span>Adobe Lightroom Classic</span>
@@ -79,14 +79,14 @@
         <span>After Effects</span>
         <span>Html & CSS</span>
        </div>
-     </section>
+    </div>
 
 
     <!--afsluttende signatur (min personlige markering)-->
-    <section class="signature">
+    <div class="signature">
     <div class="sig-line"></div> <!--tynd linje-->
-    <img src="image/Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
-    </section>
+    <img src="image/logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
+    </div>
 
     <!--footer nederst på side med navn og udannelse-->
     <footer class="footer">
