--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header> <!--side hoved med navigation-->
         <nav class="navbar"> <!--navigationens container-->
-            <img src="image/Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
+            <img src="image/logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
             
             <!--liste med menuens links-->
             <ul class="navlinks">
@@ -28,7 +28,7 @@
         </nav>
     </header>
 
-<section class="hero"> <!--sektion stykke til tekst-->
+<div class="hero"> <!--sektion stykke til tekst-->
         <div class="hero-text"> <!--tekst-boks i venstre side-->
             <h1>Design der løfter Skønhedsbranchen 💋</h1> <!--Overskrift-->
             <!--brødtekst--> 
@@ -38,20 +38,20 @@
             fremhæve skønhed på en smuk og simpel måde.</p>
         </div>
          <div class="hero-image"><!--container til billede-->
-            <img src="image/Billede forside 2.webp" alt="Mit billede">
+            <img src="image/billedeforside2.webp" alt="Mit billede">
         </div> 
 
-</section>
+    </div>
 
-<section class="designtext">
+<div class="designtext">
     <p>Digital design  •  Aesthetics  •  Feminine details</p>
-</section>
+</div>
 
 <!--afsluttende signatur (min personlige markering)-->
-<section class="signature">
+<div class="signature">
     <div class="sig-line"></div> <!--tynd linje-->
-    <img src="image/Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
-</section>
+    <img src="image/logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
+</div>
 
 <!--footer nederst på side med navn og udannelse-->
 <footer class="footer">
