--- a/produktfotografering.html
+++ b/produktfotografering.html
@@ -16,7 +16,7 @@
 <body>
     <header> <!--side hoved med navigation-->
         <nav class="navbar"> <!--navigationens container-->
-            <img src="image/Logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
+            <img src="image/logo.hvid.png" alt="Mit Logo" class="Logo"> <!--logo i header-->
             
             <!--liste med menuens links-->
             <ul class="navlinks">
@@ -33,8 +33,8 @@
     <h1>Produkt fotografering</h1>
     </section>
 
-    <section class="Pfoto-tekst">
-        <img src="image/Redigeret rhode2.webp" alt="Produktfoto" class="rhode-billede">
+    <div class="Pfoto-tekst">
+        <img src="image/redigeretrhode2.webp" alt="Produktfoto" class="rhode-billede">
         <p>
         I dette projekt arbejdede jeg med produktfotografering med fokus på rene og skarpe billeder
         af skøndhedsproduktet. Målet med det var at skabe et æstetisk og professionelt udtryk, der fremhæver produktets
@@ -43,14 +43,14 @@
         Efterfølgende redigerede jeg billederne i Adobe Lightroom Classic, hvor jeg blandt andet legede med
         kontrast, highlights, klarhed og skygger - Dette fremhæver produktets fine detaljer og skaber et rent og æstetisk billede.
         </p>
-    </section>
+    </div>
 
 
     <!--afsluttende signatur (min personlige markering)-->
-    <section class="signature">
+    <div class="signature">
     <div class="sig-line"></div> <!--tynd linje-->
-    <img src="image/Logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
-    </section>
+    <img src="image/logo.sort.png" alt="Logo foot" class="sig-logo"> <!--loget under linje-->
+    </div>
 
     <!--footer nederst på side med navn og udannelse-->
     <footer class="footer">
